--- a/common/intro.tex
+++ b/common/intro.tex
@@ -442,7 +442,7 @@ and will hopefully also help give value to the abstract concepts.
 
 \qboxnpq
   {
-    Joseph Louis Lagrange (1736-1813), mathematician
+    Joseph Louis Lagrange (1736--1813), mathematician
     \index{Lagrange, Joseph Louis}
     \index{quotes!Lagrange, Joseph Louis}
     \footnotemark
