--- a/common/math/graphics/system/opT_estH_mnoise.tex
+++ b/common/math/graphics/system/opT_estH_mnoise.tex
@@ -17,7 +17,7 @@
   % transfer function boxes
   %-------------------------------------
   \fnodeput{0}{ 0}{+0.75}{sysT}{$\opT$}%
-  \fnodeput{0}{ 0}{-0.75}{sysH}{$\estHls$}%
+  \fnodeput{0}{ 0}{-0.75}{sysH}{$\estH$}%
     %       |   |   |     |       |____ label in box
     %       |   |   |     |____________ node name
     %       |   |   |__________________ y location
