--- a/common/numsys.tex
+++ b/common/numsys.tex
@@ -1673,7 +1673,7 @@ Let $\R$ be the set of real numbers and $\Q$ the set of rational numbers.
 %--------------------------------------
 Let $\absn\in\clF{\R}{\Rnn}$ be the absolute value function.
 \thmboxt{
-  The pair $\opair{\R}{\absn}$ is a \hie{normed algebra}. In particular
+  The pair $\opair{\R}{\absn}$ is a \structe{normed algebra}. In particular
   \\\indentx
   $\ds\begin{array}{Frcl@{\qquad}C@{\qquad}D}
       1. & \abs{x}   &\ge& 0                 & \forall x \in\R    & (\prop{non-negative})
