--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -13,7 +13,8 @@
 \begin{theorem}
 \label{thm:xvy}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated to the right:
+Let $\opS$ be the \structe{system} illustrated to the right,
+where $\opT$ is \prope{not necessarily linear}.
 \end{theorem}
 \end{minipage}
 \qquad\tbox{\includegraphics{graphics/sys_xvy.pdf}}
@@ -918,14 +919,10 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opT_opH_noise} (B)
   \\&= \ZH(z)\Szpq(z)
     && \text{by \prefp{thm:xGw_xHy}}
     && \text{and (A)}
-  \\&= \ZH(z)\brs{\Szxq(z) - \Szuq(z)}
-    && \text{by \prefp{lem:opT_addnoise_u}}
-  \\&= \ZH(z)\brs{\Szxy(z) - \Szuy(z)}
-    && \text{by \prefp{lem:opT_addnoise_u}}
+  \\&= \ZH(z)\Szxq(z)
+    && \text{by \prefp{lem:opT_addnoise_w}}
+  \\&= \ZH(z)\Szxy(z)
     && \text{by \prefp{lem:opT_addnoise_v}}
-  \\&= \ZH(z)\brs{\Szxy(z) - \cancelto{0}{\Szuy(z)}}
-    && \text{by \prope{uncorrelated} hypothesis}
-    && \text{and (C)}
   \\
   \Swsy(\omega)
     &= \brlr{\Szsy(z)}_{z=e^{i\omega}}
