--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -280,17 +280,20 @@ The proof is given in \prefpp{prop:RxySwxy} (1).
 \label{thm:xGw_xHy}
 \label{cor:xGw_xHy}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated to the right.
+Let $\opS$ be the \structe{system} illustrated to the right,
+where $\opT$ is \prope{not necessarily linear}.
+Let 
+\\\indentx$\ds\seqn{\fh(n)}\eqd\opH\kdelta(n)\eqd\sum_{m\in\Z}\fh(m)\kdelta(n-m)$
+\\
+be the \fncte{impulse response} of $\opH$.
 \end{theorem}
 \end{minipage}
 \hfill\tbox{\includegraphics{graphics/xTy_xHw.pdf}}
 \\
 \thmbox{
   \brb{\begin{array}{FMMD}
-      (A).& $\opH$    is &\prope{LTI}       & and
-    \\(B).& $\rvx(n)$ is &\prope{WSS}       & and
-    \\(C).& \mc{3}{M}{$\ds\opH\kdelta(n)=\sum_{m\in\Z}\fh(m)\kdelta(n-m)$}
-    \\    & \mc{3}{D}{(\fncte{impulse response})}
+      (A).& $\rvx(n)$ is &\prope{WSS}       & and
+    \\(B).& $\opH$    is &\prope{LTI}       &
   \end{array}}
   \implies
   \brb{\begin{array}{Frc>{\ds}lD}
@@ -305,27 +308,38 @@ Let $\opS$ be the \structe{system} illustrated to the right.
 \begin{align*}
   \Rwy(m)
     &\eqd \pE\brs{\rvw(m)\rvy^\ast(0)}
-    && \text{by definition of $\Rwy$}
+    && \text{by (A) and definition of $\Rwy$}
     && \text{\xref{def:Rxym}}
   \\&\eqd \pE\brp{\brs{\opH\rvx}(m)\rvy^\ast(0)}
     && \text{by definition of $\opS$}
   \\&= \opH\pE\brp{\rvx(m)\rvy^\ast(0)}
-    && \text{by hypothesis (C)}
+    && \text{by \prope{LTI} hypothesis}
+    && \text{(B)}
   \\&\eqd \opH\Rxy(m)
     && \text{by definition of $\Rxy$}
     && \text{\xref{def:Rxym}}
   \\&= \sum_{n\in\Z}\fh(n)\Rxy(m-n)
-    && \text{by definition of $\opH$}
+    && \mathrlap{\text{by definition of $\opH$ \fncte{impulse response} $\seqn{\fh(n)}$}}
   \\&= \brs{\fh(m)\convd\Rxy(m)}
     && \text{by definition of \ope{convolution}}
     && \text{\xref{def:dsp_conv}}
   \\
-  \Swwy(m)
+  \Szwy(z)
+    &\eqd \opZ\Rwy(m)
+    && \text{by definition of $\Szwy$}
+    && \text{\xref{def:Szxy}}
+  \\&= \brs{\fh(m)\convd\Rxy(m)}
+    && \text{by previous result}
+  \\&= \ZH(z)\Szxy(z)
+    && \text{by \thme{Convolution Theorem}}
+    && \text{\xref{thm:conv}}
+  \\
+  \Swwy(\omega)
     &\eqd \opDTFT\Rwy(m)
     && \text{by definition of $\Swwy$}
     && \text{\xref{def:Swxy}}
   \\&= \brs{\fh(m)\convd\Rxy(m)}
-    && \text{by \prefp{thm:xGw_xHy}}
+    && \text{by previous result}
   \\&= \FH(\omega)\Swxy(\omega)
     && \text{by \thme{Convolution Theorem}}
     && \text{\xref{thm:conv}}
