--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -8,26 +8,12 @@
 \ProvidesPackage{dan}
 
 %--------------------------------------
-% version support
-%--------------------------------------
-%\newbox{\version}
-%--------------------------------------
 % default bullet marks
 %--------------------------------------
-%\newcommand{\imark}{\ensuretext{\scriptsize\mancube}}% default item marker
-%\newcommand{\imark}{{\fntManual\symbol{"001C}}}% default bullet: cube from Manual Font (Knuth/Hoekwater)
-%\newcommand{\imark}{\includegraphics*[height=3mm]{../common/graphics/watercraft/ghind_blue.pdf}}
-%\newcommand{\imarks}{\includegraphics*[height=3mm]{../common/graphics/watercraft/ghind_blue.pdf}\;}
-%\newcommand{\imarkL}{\includegraphics*[height=4.1mm]{../common/graphics/watercraft/ghind_blue.pdf}}
 \newcommand{\imark}{\includegraphics*[height=3mm]{../common/graphics/watercraft/ghind_blue.pdf}}%
 \newcommand{\imarks}{\includegraphics*[height=3mm]{../common/graphics/watercraft/ghind_blue.pdf}\;}%
 \newcommand{\imarkL}{\includegraphics*[height=4.1mm]{../common/graphics/watercraft/ghind_blue.pdf}}%
 
-%\newcommand{\imark}{\includegraphics*[height=3mm]{../common/graphics/watercraft/ghind_djg_grayo.eps}}
-%\newcommand{\imarks}{\includegraphics*[height=3mm]{../common/graphics/watercraft/ghind_djg_grayo.eps}\;}
-%\newcommand{\imarkL}{\includegraphics*[height=4.1mm]{../common/graphics/watercraft/ghind_djg_grayo.eps}}
-
-%\newcommand{\ccby}{\includegraphics*[height=5mm]{../common/graphics/cc/ccby.jpg}}
 \newcommand{\ccby}{\includegraphics*{../common/graphics/cc/ccby40djg.pdf}}
 \newcommand{\ccbyncnd}{\includegraphics*{../common/graphics/cc/ccbyncnd40djg.pdf}}
 
@@ -35,7 +21,6 @@
 % stamps
 %--------------------------------------
  \newcommand{\timestamp}{{\dateLong\today} {\settimeformat{timeUTC}\currenttime}}
-% \newcommand{\copyrightstamp}{Copyright {\textcopyright} {\dateYear\today} Daniel J. Greenhoe. All rights reserved.}
  \newcommand{\copyrightstamp}{Copyright {\textcopyright} {\dateYear\today} Daniel J. Greenhoe}
  \newcommand{\copyrightshort}{Copyright {\textcopyright} {\dateYear\today} Daniel J. Greenhoe}
  \newcommand{\cstamp}{{\textcopyright} {\dateYear\today} Daniel J. Greenhoe}
@@ -43,14 +28,7 @@
  \newcommand{\CCBYNCNDstatement}{%
    \href{https://creativecommons.org/}{Creative Commons} license 
    \href{https://creativecommons.org/licenses/}{CC BY-NC-ND 4.0}
-   %\qquad{\ccbyncnd}%
    }%
-% \newcommand{\CCBYNCNDstatement}{%
-%   This document is provided under the terms of the 
-%   \href{https://creativecommons.org/}{Creative Commons} license 
-%   \href{https://creativecommons.org/licenses/}{CC BY-NC-ND 4.0}. 
-%   {\ccbyncnd}%
-%   }%
 
 %--------------------------------------
 % header information
@@ -187,7 +165,6 @@
 \newcounter{cntf}% alternative counter  --- for use inside user defined environments
 \newcounter{arga}% argument a            --- for use inside user defined environments
 \newcommand{\cntreset}{\setcounter{cntr}{0}}
-%\newcommand{\cnto}{\refstepcounter{cntr}\arabic{cntr}.\refstepcounter{cntr}} %
 \newcommand{\cnto}{\cntreset\refstepcounter{cntr}\arabic{cntr}.}%
 \newcommand{\cntos}{{\cntreset\refstepcounter{cntr}\scriptsize\arabic{cntr}.}}%
 \newcommand{\cntx}{\refstepcounter{cntr}\arabic{cntr}.}%
@@ -233,7 +210,6 @@
 \newcommand{\scs}{\scriptsize}%
 \newcommand{\scy}{\scriptstyle}%
 \newcommand{\fns}{\footnotesize}%
-%\newcommand{\gsize}{\footnotesize}% font size for graphics
 \newcommand{\gsize}{\normalsize}% font size for graphics
 \newcommand{\gsizes}{\footnotesize}% small font size for graphics
 \newcommand{\scell}{\cellcolor{shadedcell}}
@@ -248,7 +224,6 @@
 %=======================================
 \newcolumntype{R}{>{\cellcolor{red}\upshape\bfseries\color{white}}c}
 \newcolumntype{G}{>{\cellcolor{tblgreen}\upshape\bfseries\color{white}}c}
-%\newcolumntype{B}{>{\cellcolor[rgb]{0,0,1}\upshape\bfseries\color{white}}c}
 \newcolumntype{B}{>{\cellcolor{blue}\upshape\bfseries\color{white}}c}
 \newcolumntype{P}{>{\cellcolor{purple}\upshape\bfseries\color{white}}c}
 \newcolumntype{g}{>{\cellcolor{gray}\upshape\bfseries\color{black}}c}
@@ -262,8 +237,6 @@
 \newcolumntype{F}{>{$\scriptsize}r<{$}}
 \newcolumntype{E}{>{\scriptsize}l}
 \newcolumntype{L}{>{\displaystyle}l}
-%\newcolumntype{D}{>{\ensuretext\{\scriptsize}l<{\}}}
-%\newcolumntype{E}{>{$}l<{$}}
 \newcolumntype{M}{>{$}l<{$}}
 \newcolumntype{N}{>{$}c<{$}}
 \newcolumntype{O}{>{$}r<{$}}
@@ -278,46 +251,26 @@
   {\renewcommand{\arraystretch}{#1}}
   {\renewcommand{\arraystretch}{1}}
 
-
-
-% General citation
-%----------------
-\newcommand{\citetbl}   [1]{\footnote{\begin{tabular}[t]{ll}#1\end{tabular}}} % citation table
-%\newcommand{\citetbl}   [1]{\footnote{#1}} % citation table
-\newcommand{\citetblp}  [1]{\footnote{\begin{tabular}[t]{p{\tw-10mm}}#1\end{tabular}}} % citation table
-\newcommand{\citetbllp} [2][30mm]{\footnote{\begin{tabular}[t]{lp{\tw-#1}}#2\end{tabular}}} % citation table
-\newcommand{\citetblt}  [1]{\footnotetext{\begin{tabular}[t]{ll}#1\end{tabular}}} % citation table for \footnotetext environment
-%\newcommand{\citetblt}  [1]{\footnotetext{#1}} % citation table for \footnotetext environment
-\newcommand{\citetbltbl}[1]{\footnotetext{\begin{tabular}[t]{ll}#1\end{tabular}}} % citation table for \footnotetext environment
-\newcommand{\citetblf}  [1]{\begin{tabular}[t]{ll}#1\end{tabular}} % citation table for \footnotetext environment
-
-%\newcommand{\citetbl}   [1]{\footnote{#1}} % citation table
-%\newcommand{\citetblp}  [1]{\footnote{#1}} % citation table
-%\newcommand{\citetblt}  [1]{\footnotetext{#1}} % citation table
-
 %=======================================
 % Citation Support
 %=======================================
+% General citation
+%----------------
+\newcommand{\citetbl}   [1]{\footnote{\begin{tabular}[t]{ll}#1\end{tabular}}} % citation table
+\newcommand{\citetblp}  [1]{\footnote{\begin{tabular}[t]{p{\tw-10mm}}#1\end{tabular}}} % citation table
+\newcommand{\citetbllp} [2][30mm]{\footnote{\begin{tabular}[t]{lp{\tw-#1}}#2\end{tabular}}} % citation table
+\newcommand{\citetblt}  [1]{\footnotetext{\begin{tabular}[t]{ll}#1\end{tabular}}} % citation table for \footnotetext environment
+\newcommand{\citetbltbl}[1]{\footnotetext{\begin{tabular}[t]{ll}#1\end{tabular}}} % citation table for \footnotetext environment
+\newcommand{\citetblf}  [1]{\begin{tabular}[t]{ll}#1\end{tabular}} % citation table for \footnotetext environment
+
 \newcommand{\citebullet}{{\scriptsize\book}}% bullet for book references
 \newcommand{\citePbullet}{{\scriptsize\pagec}}% bullet for journal paper references
 \newcommand{\citeIbullet}{{\scriptsize\notebook}}% bullet for incollection references (e.g. a paper in a book)
 \newcommand{\citeWbullet}{{\scriptsize\computer}}% bullet for web resource
 \newcommand{\citeFbullet}{{\scriptsize\floppydisk}}% bullet for data file
 \newcommand{\crossrefbullet}{{\scriptsize\booko}}% bullet for cross references
-
 \newcommand{\lcomdelim}{$\langle$} % left  comment delimeter
 \newcommand{\rcomdelim}{$\rangle$} % right comment delimeter
-
-%2014feb25%\newcommand{\citobullet}{{\scriptsize\pagec}}% bullet for original source references (deprecated)
-%\newcommand{\citebullet}{{\scriptsize\PaperPortrait\hspace{1ex}}}%
-%\newcommand{\citobullet}{{\scriptsize\color{cito}\PaperPortrait\hspace{1ex}}}%
-%\newcommand{\citebullet}{}%
-%\newcommand{\citebullet}{{\fntDJG{B}}}%
-%\newcommand{\citobullet}{{\color{cito}\fntDJG{B}}}%
-%\newcommand{\citobullet}{{\fntDJG\addfontfeatures{Color=cito}B}}%
-%\newcommand{\citobullet}{{\scriptsize\booko}}%
-%\newcommand{\lcomdelim}{} % left  comment delimeter
-%\newcommand{\rcomdelim}{} % right comment delimeter
 
 %---------------------------------------
 % book citations
@@ -328,17 +281,11 @@
 \newcommand{\citerps} [2]{\citebullet\;\cite{#1}, pages #2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citerpp} [3]{\citebullet\;\cite{#1}, pages #2--#3\index[xref]{{\cite{#1}}}} % citation table entry with ref and page range
 \newcommand{\citerc}  [2]{\citebullet\;\cite{#1} \lcomdelim#2\rcomdelim} % citation table entry with ref and one comment
-%\newcommand{\citerc}  [2]{\citebullet\;\cite{#1} \lcomdelim#2\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citeru}  [2]{\citebullet\;\cite{#1} \lcomdelim\url{#2}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citeruc} [3]{\citebullet\;\cite{#1} \lcomdelim\url{#2}\rcomdelim \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citerpc} [3]{\citebullet\;\cite{#1}, page~#2 \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citerppc}[4]{\citebullet\;\cite{#1}, pages #2--#3 \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 
-%---------------------------------------
-% deprecated
-%---------------------------------------
-%\newcommand{\citep}[2]{\footnote{\citerp{#1}{#2}}}%
-%\newcommand{\citet}[1]{\footnotetext{\citer{#1}}}%
 %---------------------------------------
 % OEIS citations
 %---------------------------------------
@@ -476,6 +423,9 @@
 \newcommand{\noproof} [0]{\attention[no proof]}
 \newcommand{\note} [0]{\attention[note]}
 
+%--------------------------------------
+% quote boxes
+%--------------------------------------
 \newcommand{\qboxnpq}[4][20mm]{% example: \qboxnpq[18mm]{name...}{image.jpg}{quote to the right of the image}
   \begin{center}%
     \shadowbox{\centering%
@@ -515,24 +465,6 @@
   \end{center}%
   }%
 
-%name picture quote translation quote-box
-%\newcommand{\qboxnpqt}[4]{%
-%  \begin{center}%
-%    \shadowbox{\parbox[b]{15\textwidth/16}{\center%
-%      \parbox[t]{6\textwidth/16}{\fntquote%
-%        \quoteo #3\quotec%
-%        }%
-%      \parbox[t][2\textwidth/16][b]{2\textwidth/16}{\center%
-%        \includegraphics*[width=2\textwidth/16-2ex, keepaspectratio=true]{#2}%
-%        }%
-%      \parbox[t]{6\textwidth/16}{\fntquote%
-%        \quoteo #4\quotec%
-%       }%
-%      \\[1ex]\normalfont\footnotesize #1%
-%    }}%
-%  \end{center}%
-%  }%
-
 \newcommand{\qboxnpqt}[5][20mm]{% example: \qboxnpqt[25mm]{name}{img.jpg}{text left}{text right}
   \begin{center}%
     \shadowbox{\centering%
@@ -561,22 +493,6 @@
       }%
   %\end{center}%
   }%
-
-%20180610%%name quote translation quote-box
-%20180610%\newcommand{\qboxnqt}[3]{%
-%20180610%  \begin{center}%
-%20180610%    \shadowbox{\parbox[b]{15\textwidth/16}{\center%
-%20180610%      \parbox[t]{7\textwidth/16}{\fntquote%
-%20180610%        \quoteo #2\quotec%
-%20180610%        }%
-%20180610%      \hspace{5ex}%
-%20180610%      \parbox[t]{7\textwidth/16}{\fntquote%
-%20180610%        \quoteo #3\quotec%
-%20180610%       }%
-%20180610%      \\[1ex]\normalfont\footnotesize #1%
-%20180610%    }}%
-%20180610%  \end{center}%
-%20180610%  }%
 
 %name quote translation quote-box
 \newcommand{\qboxnqt}[3]{{%
@@ -621,10 +537,7 @@
 %--------------------------------------
 % Font environments
 %--------------------------------------
-%\newenvironment{personal}{\color{handwriting}\usefont{OT1}{augie}{m}{n}}%
-%                         {\normalfont\normalcolor}
-%\newenvironment{personal}{}{}% debug
-\newenvironment{personal}{\fnthw\color{handwriting}}{\normalcolor\normalfont}% debug
+\newenvironment{personal}{\fnthw\color{handwriting}}{\normalcolor\normalfont}%
 
 %--------------------------------------
 % Environments
@@ -761,15 +674,6 @@
   {\begin{minipage}[c]{(\tw-#1-11mm)/2}#4\end{minipage}}%
   }%
 
-%\newcommand{\textpl}[3][20mm]{%
-%  \vtop{% http://www.tex.ac.uk/cgi-bin/texfaq2html?label=topgraph
-%    \vskip-1ex
-%    %\vskip0pt%
-%    \hbox{\includegraphics*[width=#1,height=#1,keepaspectratio=true]{#3}}%
-%    }
-%  \begin{minipage}[t]{15\tw/16-#1-2ex} #2 \end{minipage}%
-%  }
-
 \newcommand{\ingr}[3]{%include graphic
   \includegraphics*[width=#1,height=#2,keepaspectratio=true]{#3}%
   }%
@@ -842,6 +746,7 @@
 %--------------------------------------
 \newcommand{\ccc}{\cellcolor{cyan}}
 \newcommand{\ccg}{\cellcolor{lgray}}
+\newcommand{\ccy}{\cellcolor{yellow}}
 
 
 %2015aug17%%--------------------------------------
@@ -924,7 +829,6 @@
 
 \newcommand{\ononepage}[2][\textwidth]{{\setlength{\parindent}{0ex}\begin{minipage}{#1}#2\end{minipage}}}
 \newenvironment{boxedminipage}[3][]{\begin{minipage}[#1]{#2}#3}{\end{minipage}}
-%\newcommand{\fullcite}{\cite}
 
 %==========================================================
 % banner
@@ -937,8 +841,6 @@
   \end{tabular}\newline%
   }}%
 
-
-
 %==========================================================
 % blanks
 %==========================================================
@@ -950,11 +852,9 @@
 \newcommand{\bsox}[2][]{\blank[#1]}% blank with extraneous (extra) unused paramter
 \newcommand{\blanksol}[2][]{% blank with solution
   \ifthenelse{\isempty{#1}}{\settowidth{\length}{#2#2}}{\setlength{\length}{#1}}
-  %\ifthenelse{#1=0}{\settowidth{\length}{#2#2}}{\setlength{\length}{#1}}
   \ifthenelse{\boolean{showSolution}}%
     {\underline{\parbox[l][1em][c]{\length}{\centering\textcolor{blue}{#2}}}}%
     {\underline{\parbox[l][1em][c]{\length}{\hspace{1ex}}}}%
-  %\ifthenelse{\isempty{#2}}{}{\index[xeng]{#2}}
   }
 \newcommand{\bsoAo}[2][]{\cntreset\refstepcounter{cntr}\blankopt[#1]{\Alph{cntr}}{#2}}%blank with ABC counter set to A
 \newcommand{\bsoA} [2][]{\refstepcounter{cntr}\blankopt[#1]{\Alph{cntr}}{#2}}%blank with ABC counter
@@ -962,7 +862,6 @@
 \newcommand{\bss}[2][30mm]{\blanksso[#1]{#2}}% blank with shown solution
 \newcommand{\blanksso}[2][30mm]{% blank with shown solution
   \underline{\parbox[l][1em][c]{#1}{\centering\color{blue}#2}}%
-  %\index[xeng]{#2}
   \index{#2}
   }
 
@@ -983,10 +882,6 @@
         {\settowidth{\length}{#2#2}}%
         {\settowidth{\length}{#3#3}}%
       }%
-      %{\ifthenelse{\lengthtest{\lengtha>\lengthb}}%      
-      %  {\settowidth{\length}{\lengtha}}%
-      %  {\settowidth{\length}{\lengthb}}%
-      %}%
     \renewcommand{\arraystretch}{0.5}%
     \begin{tabular}[t]{@{}c@{}}%
       \blanksol[\length]{#3}%
@@ -1015,6 +910,3 @@
   \end{tabular}%
   \renewcommand{\arraystretch}{1}
   }%
-
-
-
