--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -1265,7 +1265,7 @@ Let $\fCostrq(\estG)$ and $\fCostsy(\estH)$ be defined as in \prefpp{def:fCost}.
     %---------------------------
   \\&\eqd \opDTFT\pE\brp{\brs{\rvr(n)-\rvq(n)}\brs{\rvr(0)-\rvq(0)}^\ast}
     && \text{by definition of $\fCostrq$}
-    && \text{by \xref{def:fCost}}
+    && \text{\xref{def:fCost}}
   \\&=    \opFT\brs{
             \pE\brs{\rvr(n)\rvr^\ast(0)}
            -\pE\brs{\rvr(n)\rvq^\ast(0)}
@@ -1303,7 +1303,7 @@ Let $\fCostrq(\estG)$ and $\fCostsy(\estH)$ be defined as in \prefpp{def:fCost}.
     %---------------------------
   \\&\eqd \opDTFT\pE\brp{\brs{\rvs(n)-\rvy(n)}\brs{\rvs(0)-\rvy(0)}^\ast}
     && \text{by definition of $\fCostsy$}
-    && \text{by \xref{def:fCost}}
+    && \text{\xref{def:fCost}}
   \\&=    \opFT\brs{
             \pE\brs{\rvs(n)\rvs^\ast(0)}
            -\pE\brs{\rvs(n)\rvy^\ast(0)}
@@ -1401,7 +1401,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (A) or (B).
          - (\estG_R-i\estG_I)\Swpy^\ast
          + \Swqq}
            }
-      \\&= 2\estG_I\Swpp - i\Swpy + i\Swpy^\ast + \cancelto{0}{\pderiv{}{\estG_R}\Swqq}
+      \\&= 2\estG_I\Swpp - i\Swpy + i\Swpy^\ast + \cancelto{0}{\pderiv{}{\estG_I}\Swqq}
         && \text{because $\rvq$ does not vary with $\estG$}
       \\&= 2\estG_I\Swpp - 2i(i\Imag\Swpy)
       \\&= 2\estG_I\Swpp + 2i(i\Imag\Swyp)
