--- a/common/sty/article.sty
+++ b/common/sty/article.sty
@@ -8,9 +8,6 @@
 \ProvidesPackage{article}
 
 
-%=======================================
-% Indexing Support
-%=======================================
 \renewcommand{\formboxxyz}[4]{%formula box template
   \mbox{}\newline\indentx
   $\ds{%
@@ -21,39 +18,26 @@
   #4
   }%
 
-\renewcommand{\defboxt} [1]{#1}%{\defbox{\begin{array}{M}#1\end{array}}}
-\renewcommand{\thmboxt} [1]{#1}%{\thmbox{\begin{array}{M}#1\end{array}}}
-\renewcommand{\lemboxt} [1]{#1}%{\lembox{\begin{array}{M}#1\end{array}}}
-\renewcommand{\propboxt}[1]{#1}%{\propbox{\begin{array}{M}#1\end{array}}}
-\renewcommand{\exboxt}  [1]{#1}%{\exbox{\begin{array}{M}#1\end{array}}}
-\renewcommand{\axboxt}  [1]{#1}%{\axbox{\begin{array}{M}#1\end{array}}}
-\renewcommand{\cntboxt} [1]{#1}%{\cntbox{\begin{array}{M}#1\end{array}}}
-\renewcommand{\remboxt} [1]{#1}%{\cntbox{\begin{array}{M}#1\end{array}}}
+\renewcommand{\formboxxyz}[4]{\mbox{}\newline$\ds\boxed{#4}$}
 
-%\renewcommand{\citetbl}   [1]{\footnote{#1}} % citation table
-%\renewcommand{\citetblp}  [1]{\footnote{#1}} % citation table
-%\renewcommand{\citetblt}  [1]{\footnotetext{#1}} % citation table
-%\newcommand{\citetbllp} [2][30mm]{\footnote{\begin{tabular}[t]{lp{\tw-#1}}#2\end{tabular}}} % citation table
-%\newcommand{\citetblt}  [1]{\footnotetext{\begin{tabular}[t]{ll}#1\end{tabular}}} % citation table for \footnotetext environment
-%\newcommand{\citetblf}  [1]{\begin{tabular}[t]{ll}#1\end{tabular}} % citation table for \footnotetext environment
-
-  \newtheorem{theorem}{Theorem}[section]
-  \newtheorem{lemma}[theorem]{Lemma}
-  \newtheorem{proposition}[theorem]{Proposition}
-  \newtheorem{corollary}[theorem]{Corollary}
-\theoremstyle{definition}
-  \newtheorem{definition}[theorem]{Definition}
-  \newtheorem{example}[theorem]{Example}
-  \newtheorem{counterex}[theorem]{Counterexample}
-  \newtheorem{exercise}[theorem]{Exercise}
-  \newtheorem{conclusion}[theorem]{Conclusion}
-  \newtheorem{conjecture}[theorem]{Conjecture}
-  \newtheorem{criterion}[theorem]{Criterion}
-  \newtheorem{summary}[theorem]{Summary}
-  \newtheorem{axiom}[theorem]{Axiom}
-\theoremstyle{remark}
-  \newtheorem{remark}[theorem]{Remark}
-\numberwithin{equation}{section}
+  %\newtheorem{lemma}[theorem]{Lemma} # do this if want Theorem 1.1, Lemma 1.2
+  \newtheorem{theorem}    {Theorem}        [section]
+  \newtheorem{lemma}      {Lemma}          [section]
+  \newtheorem{proposition}{Proposition}    [section]
+  \newtheorem{corollary}  {Corollary}      [section]
+%\theoremstyle{definition}
+  \newtheorem{definition} {Definition}     [section]
+  \newtheorem{example}    {Example}        [section]
+  \newtheorem{counterex}  {Counterexample} [section]
+  \newtheorem{exercise}   {Exercise}       [section]
+  \newtheorem{conclusion} {Conclusion}     [section]
+  \newtheorem{conjecture} {Conjecture}     [section]
+  \newtheorem{criterion}  {Criterion}      [section]
+  \newtheorem{summary}    {Summary}        [section]
+  \newtheorem{axiom}      {Axiom}          [section]
+%\theoremstyle{remark}
+  \newtheorem{remark}     {Remark}         [section]
+%\numberwithin{equation}{section}
 
 \geometry{
   xetex,paper=a4paper,centering,twoside,includehead,includefoot,nomarginpar,
@@ -64,6 +48,7 @@
   }
 
 \setlength{\parindent}{0pt}%
+\setlength{\parskip}{1em}%
 
 %\newenvironment{asciiabstract}{}{}
 \renewcommand{\citetbl}[1]{\footnote{#1}}
@@ -72,37 +57,6 @@
 % Headers and Footers
 %--------------------------------------
  \pagestyle{fancy}           % fancy headers from package <fancyhdr>
-%%\dateShort
-%\DTMsavenow{nowstamp}%
-%\DTMtozulu{nowstamp}{nowstampz}
-%
-%20171230uct.moved to dan.sty%\fancyhf[HOL,HOR,HEL,HER]{}%
-%20171230uct.moved to dan.sty%\fancyhf[HEC]{% header even pages
-%20171230uct.moved to dan.sty%    \setlength{\arrayrulewidth}{0.5pt}%
-%20171230uct.moved to dan.sty%    \arrayrulecolor{gray}%
-%20171230uct.moved to dan.sty%    \begin{tabular}{|p{24.74mm}|p{40mm}|p{\tw-78mm}|}%
-%20171230uct.moved to dan.sty%      \hline%
-%20171230uct.moved to dan.sty%        \sffamily\small{page~\thepage}
-%20171230uct.moved to dan.sty%       &\sffamily\footnotesize\centering Daniel J. Greenhoe %
-%20171230uct.moved to dan.sty%       &\sffamily\footnotesize\scshape\mbox{}\hfill\leftmark\mbox{}%
-%20171230uct.moved to dan.sty%      \\\hline\hline
-%20171230uct.moved to dan.sty%    \end{tabular}}%
-%20171230uct.moved to dan.sty%\fancyhf[HOC]{% header odd pages
-%20171230uct.moved to dan.sty%    \setlength{\arrayrulewidth}{0.5pt}%
-%20171230uct.moved to dan.sty%    \arrayrulecolor{gray}%
-%20171230uct.moved to dan.sty%    \begin{tabular}{|p{\tw-78mm}|p{40mm}|p{24.74mm}|}%
-%20171230uct.moved to dan.sty%      \hline%
-%20171230uct.moved to dan.sty%        \sffamily\footnotesize\scshape\rightmark%
-%20171230uct.moved to dan.sty%       &\sffamily\footnotesize\centering Daniel J. Greenhoe %
-%20171230uct.moved to dan.sty%       &\sffamily\small\mbox{}\hfill{page~\thepage}\mbox{}
-%20171230uct.moved to dan.sty%      \\\hline\hline
-%20171230uct.moved to dan.sty%    \end{tabular}}%
-%20171230uct.moved to dan.sty%\fancyhf[FOL,FOR,FEL,FER]{}%
-%20171230uct.moved to dan.sty%%        |||
-%20171230uct.moved to dan.sty%%        |||______ L=left       C=center     R=right
-%20171230uct.moved to dan.sty%%        ||_______ E=even page  O=odd page
-%20171230uct.moved to dan.sty%%        |________ H=header     F=footer
-%20171230uct.moved to dan.sty%%
 
 \renewcommand{\footerinfo}[3]{%
   \fancyhf[FEC]{% footer even pages
@@ -129,37 +83,5 @@
       \end{tabular*}}%
   }% end \footerinfo
 
-%\newcommand{\footerinfo}[3]{
-%\fancyhf[FEC]{% footer even pages
-%    \scs%
-%    \setlength{\arrayrulewidth}{0.5pt}%
-%    \arrayrulecolor{gray}%
-%    \begin{tabular*}{\tw}{|c@{\extracolsep\fill}|c|c|}%
-%      \hline\hline%
-%        \tbox{\href{https://creativecommons.org/licenses/by/4.0/legalcode}{\ccby}}%
-%        %\tbox{\ccby}\tbox{\fntDigital version #1\\\href{https://creativecommons.org/licenses/by/4.0/legalcode}{CC-BY 4.0}}%
-%       &\fntAdventor\tbox{\imarkL\tbox{#2\\#3}\imarkL\fntDigital\tbox{version #1}}%
-%       &\sffamily\scshape\tbox{\today\quad\currenttime\hspace{1ex}UTC\\%
-%                               Copyright {\textcopyright} \dateYear Daniel J. Greenhoe}%
-%      \\\hline%
-%    \end{tabular*}}%
-%\fancyhf[FOC]{% footer odd pages
-%    \scs%
-%    \setlength{\arrayrulewidth}{0.5pt}%
-%    \arrayrulecolor{gray}%
-%    \begin{tabular*}{\tw}{|c@{\extracolsep\fill}|c|c|}%
-%      \hline\hline%
-%        \sffamily\scshape\tbox{\today\quad\currenttime\hspace{1ex}UTC\\%
-%                               Copyright {\textcopyright} \dateYear Daniel J. Greenhoe}%
-%       &\fntAdventor\tbox{\imarkL\tbox{#2\\#3}\imarkL\fntDigital\tbox{version #1}}%
-%       &\tbox{\href{https://creativecommons.org/licenses/by/4.0/legalcode}{\ccby}}%
-%       %&\tbox{\ccby}\tbox{\fntDigital version #1\\%
-%       %                         \href{https://creativecommons.org/licenses/by/4.0/legalcode}{CC-BY 4.0}}%
-%      \\\hline%
-%    \end{tabular*}}%
-%}
 
  \renewcommand{\headrulewidth}{0pt}
-% \renewcommand{\footrulewidth}{0pt}
-
-%\markboth{Daniel J. Greenhoe}
