--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -82,7 +82,7 @@
 @book{bendat1980,
   isbn10       = {0471058874},
   isbn         = {9780471058878},
-  author       = {Julius S. Bendat and Allan G. Piersol}, 
+  author       = {Julius S. Bendat and Allan G. Piersol},
   title        = {Engineering Applications of Correlation and Spectral Analysis},
   publisher    = {John Wiley \& Sons},
   pages        = {302},
@@ -95,7 +95,7 @@
 @book{bendat1993,
   isbn10       = {0471570559},
   isbn         = {9780471570554},
-  author       = {Julius S. Bendat and Allan G. Piersol}, 
+  author       = {Julius S. Bendat and Allan G. Piersol},
   title        = {Engineering Applications of Correlation and Spectral Analysis},
   publisher    = {Wiley-Interscience},
   edition      = {2},
@@ -910,7 +910,18 @@
   pages        = {897--899},
   url          = {https://www.tib.eu/en/search/id/TIBKAT%3A246489537/Proceedings-of-the-4th-International-Modal-Analysis/},
   }
-  
+
+@article{wilks1963,
+  title        = {Mathematical statistics},
+  series       = {Wiley series in probability and mathematical statistics},
+  author       = {Samuel Stanley Wilks},
+  edition      = {``Second Printing with Corrections"},
+  publisher    = {Wiley},
+  year         = {1963},
+  pages        = {644},
+  urlg         = {https://books.google.com/books?id=-sJLAAAAMAAJ},
+  }
+
 @article{yan2012,
   author       = {W. J. Yan and W. X. Ren},
   title        = {Operational modal parameter identification from power spectrum density transmissibility},
