--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -57,6 +57,7 @@
 \begin{definition}
 \footnote{
   \citerpgc{papoulis1984}{263}{0070484686}{$R_{xy}(m)=E\brb{\rvx(m)\rvy^\ast(0)}$},
+  \citerpc{wilks1963}{77}{\textsection 3.4 ``Moments of two-dimensional random variables"},
   \citerpgc{cadzow}      {341}{0023180102}{$r_{xy}(m)=E\brs{\rvx(m)\rvy^\ast(0)}$},
   \citePc  {matlab_xcorr}                 {$R_{xy}(m)=E\setn{x_{n+m}y_n^\ast}   $},
   \citePc  {matlab_cpsd}                  {$R_{xy}(m)=E\setn{x_{n+m}y_n^\ast}   $}
