--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -425,6 +425,16 @@
   pages        = {543},
   }
 
+@book{kenney1947,
+  title        = {Mathematics of Statistics, Part One},
+  author       = {John Francis Kenney},
+  edition      = {second edition, second printing},
+  address      = {New York},
+  year         = {1947},
+  publisher    = {D. Van Nostrand Company},
+  pages        = {260 + xii},
+  }
+
 @book{kolmogorov1933e2,
   author       = {Andrei Nikolaevich Kolmogorov},
   translator   = {Nathan Morrison},
