Jensen's Inequality expectation examples

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -786,6 +786,19 @@
   url          = {https://doi.org/10.1086%2F160554},
   }
 
+@book{shao2003,
+  isbn10       = {0387953825},
+  isbn         = {9780387953823},
+  title        = {Mathematical Statistics},
+  series       = {Springer Texts in Statistics},
+  issn         = {ISSN 1431-875X},
+  author       = {Jun Shao},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2003},
+  pages        = {591},
+  url          = {http://books.google.com/books?vid=ISBN0387953825},
+  urla         = {http://www.amazon.com/dp/0387953825},
+  }
 
 @book{shin2008,
   isbn10       = {0470725648},
