--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -119,16 +119,20 @@ Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
 \begin{corollary}
 \label{cor:pE_linop}
 %---------------------------------------
-Let $\opE$ be the an operator from a linear space $\spX$ to a linear space $\spY$, both over a field $\F$.
+Let $\pE$ be the \ope{expectation operator} over a \structe{probability space} $\ps$.
+Let $spLLF$ be a \structe{vector space of random variables} over $\ps$.
 \corbox{
-  \begin{array}{F>{\ds}lc>{\ds}lD}
-      (1). & \pE\vzero    &=& \vzero                                                            & and
-    \\(2). & \pE(-\rvX)    &=& -(\pE\rvX)                                                       & and
-    \\(3). & \pE(\rvX-\rvY) &=& \pE\rvX - \pE\rvY                                               & and
+  \begin{array}{F>{\ds}lc>{\ds}lCD|}
+      (1). & \pE\vzero    &=& \vzero               &                            & and
+    \\(2). & \pE(-\rvX)    &=& -(\pE\rvX)          & \forall \rvX     \in\spLLF & and
+    \\(3). & \pE(\rvX-\rvY) &=& \pE\rvX - \pE\rvY  & \forall \rvX,\rvY\in\spLLF & and
   \end{array}
   \qquad
-  \begin{array}{F>{\ds}lc>{\ds}lD}
-      (4). & \pE\brp{\sum_{n=1}^\xN \alpha_n\rvX_n}  &=& \sum_{n=1}^\xN \alpha_n\brp{\pE\rvX_n} &
+  \begin{array}{F>{\ds}lc>{\ds}lCC}
+      (4). & \pE\brp{\sum_{n=1}^\xN \alpha_n\rvX_n}  
+           &=& \sum_{n=1}^\xN \alpha_n\brp{\pE\rvX_n} 
+           &   \forall \alpha_n\in\F,
+           &   \forall\rvX\in\spLLF
   \end{array}
   }
 \end{corollary}
@@ -197,7 +201,7 @@ Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
     &&    \text{\xref{def:pvar}}
   \\&=    \pEx\brs{\rvX^2-2\rvX\pEx\rvX + (\pEx\rvX)^2 }
     &&    \text{by \thme{Binomial Theorem}}
-    &&    \text{\ifxref{polynom}{thm:binomial}}
+    &&    \text{\ifxref{binomial}{thm:binomial}}
   \\&=    \pEx\rvX^2  - \pEx\brs{2\rvX\pEx\rvX}  + \pEx (\pEx\rvX)^2
     &&    \text{by \prope{linearity} of $\pE$}
     &&    \text{\xref{thm:pE_linop}}
@@ -254,6 +258,7 @@ and illustrated in \prefpp{fig:jensen}.
 %--------------------------------------
 \begin{corollary}[\thmd{Jensen's inequality}]
 \footnote{
+  \citerpgc{shao2003}{31}{0387953825}{``1.3 Distributions and Their Characteristics"},
   \citerp{cover}{25},
   \citerpp{jensen1906}{179}{180}
   }
@@ -294,6 +299,21 @@ Then
     \end{align*}
 \end{enumerate}
 \end{proof}
+
+%--------------------------------------
+\begin{example}
+\footnote{
+  \citerppgc{shao2003}{31}{32}{0387953825}{``Example 1.18"}
+  }
+\label{ex:jensen}
+%--------------------------------------
+Some examples of \thme{Jensen's Inequality} \xref{cor:jenson} applied to the \ope{expectation operator}
+are the following:
+\exbox{\begin{array}{>{\ds}rc>{\ds}l}
+    \brp{\pE\rvX}^{-1} &<& \pE\brp{\rvX^{-1}}
+  \\\pE\brp{\log\rvX}  &<& \log\brp{\pE\rvX}
+\end{array}}
+\end{example}
 
 %---------------------------------------
 \begin{theorem}[\thmd{Law of the Unconscious Statistician}]
