--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -579,8 +579,8 @@ the \ope{Fourier Transform} of $\ff(x)$.
 \label{def:Mn_ft}
 %--------------------------------------
 \defboxt{
-  The quantity $M_n$ is the \hid{$n$th moment} of a function $\ff(x)\in\spLLR$ if
-  \\\indentx$\ds M_n \eqd \int_{\R} x^n \ff(x) \dx \qquad \text{for }n\in\Znn$.
+  The quantity $\fM_n$ is the \vald{$n$th moment} of a function $\ff(x)\in\spLLR$ if
+  \\\indentx$\ds \fM_n \eqd \int_{\R} x^n \ff(x) \dx \qquad \text{for }n\in\Znn$.
   }
 \end{definition}
 
@@ -591,11 +591,11 @@ the \ope{Fourier Transform} of $\ff(x)$.
   }
 \label{lem:har_moment}
 %--------------------------------------
-Let $M_n$ be the \fncte{$n$th moment} \xref{def:Mn_ft} and 
+Let $\fM_n$ be the \fncte{$n$th moment} \xref{def:Mn_ft} and 
 $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:opFT} of a function $\ff(x)$ in $\spLLR$ \xref{def:spLLR}.
 \lembox{\begin{array}{>{\ds}rc>{\ds}l@{\qquad}C}
-  M_n  &=&  \brlr{\sqrt{2\pi}(i)^{n}\opddwn  \Ff(\omega)}_{\omega=0} & \forall n\in\Znn,\,\ff\in\spLLR\\
-  \brlr{\opddwn  \Ff(\omega)}_{\omega=0}  &=& \cft(-i)^n M_n         & \forall n\in\Znn,\,\ff\in\spLLR
+  \fM_n  &=&  \brlr{\sqrt{2\pi}(i)^{n}\opddwn  \Ff(\omega)}_{\omega=0} & \forall n\in\Znn,\,\ff\in\spLLR\\
+  \brlr{\opddwn  \Ff(\omega)}_{\omega=0}  &=& \cft(-i)^n \fM_n         & \forall n\in\Znn,\,\ff\in\spLLR
 \end{array}}
 \end{lemma}
 \begin{proof}
@@ -607,8 +607,8 @@ $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:
     \\&= \left.(i)^n\int_\R \ff(x) \brs{(-i)^n x^n \fkernea{x}{\omega}}\dx\right|_{\omega=0} 
     \\&= (-i^2)^n \int_\R \ff(x) x^n \dx
     \\&= \int_\R \ff(x) x^n \dx
-    \\&\eqd M_n
-      && \text{by definition of $M_n$ \xref{def:Mn_ft}}
+    \\&\eqd \fM_n
+      && \text{by definition of $\fM_n$ \xref{def:Mn_ft}}
   \end{align*}
 \end{proof}
 
@@ -621,11 +621,11 @@ $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:
 \label{lem:vanish_deriv}
 \index{vanishing moments}
 %--------------------------------------
-Let $M_n$ be the \fncte{$n$th moment} \xref{def:Mn_ft} and 
+Let $\fM_n$ be the \fncte{$n$th moment} \xref{def:Mn_ft} and 
 $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:opFT} of a function $\ff(x)$ in $\spLLR$ \xref{def:spLLR}.
 \lembox{
   %\mcom{\inprod{\ff(x)}{x^n}=0}{$\ff(x)$ has a vanishing $n$th moment} 
-  M_n=0
+  \fM_n=0
   \qquad\iff\qquad
   \left.\opddwn \Ff(\omega)\right|_{\omega=0} =0
   \qquad\scy\forall n\in\Znn
@@ -670,13 +670,13 @@ $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:
   \citor{fix1969}
   }
 %--------------------------------------
-Let $\ff(x)$ be a function in $\spLLR$ and $M_n$ the \hie{$n$th moment} \xref{def:Mn_ft} of $\ff(x)$.
+Let $\ff(x)$ be a function in $\spLLR$ and $\fM_n$ the \hie{$n$th moment} \xref{def:Mn_ft} of $\ff(x)$.
 Let $\opTrn$ be the \fncte{translation operator} \xref{def:opT}.
 \lembox{
-  \mcom{{\sum_{k\in\Z} \opTrn^k x^n \ff(x) = M_n}}{\prope{Strang-Fix condition} in ``time"}
-  %\mcom{{\sum_{k\in\Z} (x-k)^n \ff(x-k) = M_n}}{\prope{Strang-Fix condition} in ``time"}
+  \mcom{{\sum_{k\in\Z} \opTrn^k x^n \ff(x) = \fM_n}}{\prope{Strang-Fix condition} in ``time"}
+  %\mcom{{\sum_{k\in\Z} (x-k)^n \ff(x-k) = \fM_n}}{\prope{Strang-Fix condition} in ``time"}
   \qquad\iff\qquad
-  \mcom{{\left.\opddwn  \Ff(\omega) \right|_{\omega=2\pi k} = \cft (-i)^n \kdelta_k M_n}}{\prope{Strang-Fix condition} in ``frequency"}
+  \mcom{{\left.\opddwn  \Ff(\omega) \right|_{\omega=2\pi k} = \cft (-i)^n \kdelta_k \fM_n}}{\prope{Strang-Fix condition} in ``frequency"}
   %\qquad\scy\text{for $n=1,2,\ldots,p-1$}
   }
 \end{lemma}
@@ -693,23 +693,23 @@ Let $\opTrn$ be the \fncte{translation operator} \xref{def:opT}.
       \\&= (-i)^n \cft \sum_{k\in\Z} \brs{\int_\R  x^n \ff(x)  e^{-i\omega x} \dx}_{\omega=2\pi k} e^{i2\pi kx}  \kdelta_k
       \\&= (-i)^n \cft \sum_{k\in\Z} (x-k)^n \ff(x-k)  \kdelta_k
         && \text{by \thme{PSF} \xref{thm:psf}}
-      \\&= \cft (-i)^n \kdelta_k M_n
+      \\&= \cft (-i)^n \kdelta_k \fM_n
         && \text{by left hypothesis}
     \end{align*}
 
-  %The quantity $(-i)^n M_n$ is not a function of $x$ which implies
+  %The quantity $(-i)^n \fM_n$ is not a function of $x$ which implies
   %that 
   %$\sum_{k\in\Z} \left.\opddwn  \Ff(\omega)\right|_{\omega=2\pi k}=0$
   %for $k\ne 0$.
   %This implies
   %\[ \left.\opddwn  \Ff(\omega)\right|_{\omega=2\pi k}
-  %   = (-i)^n \kdelta_k M_n.
+  %   = (-i)^n \kdelta_k \fM_n.
   %\]
  
   \item Proof for ($\impliedby$) case:
     \begin{align*}
-      \cft (-i)^n M_n
-        &= \cft \sum_{k\in\Z} \left[(-i)^n \kdelta_k M_n \right] e^{-i2\pi kx}
+      \cft (-i)^n \fM_n
+        &= \cft \sum_{k\in\Z} \left[(-i)^n \kdelta_k \fM_n \right] e^{-i2\pi kx}
         && \text{by definition of $\kdelta$}
         && \text{\ifxref{frames}{def:kdelta}}
       \\&= \sum_{k\in\Z} \left. 
